[gd_scene load_steps=5 format=3 uid="uid://bdupuuuef8p65"]

[ext_resource type="Script" uid="uid://do0kg3p2q4xl7" path="res://scripts/fase_1.gd" id="1_rkbkb"]
[ext_resource type="Script" uid="uid://dcu2uumowvacn" path="res://scripts/botao_confirmar_resposta_fase_1.gd" id="2_patqc"]
[ext_resource type="Script" uid="uid://b28wik5y4itoa" path="res://scripts/area_resposta_fase_1.gd" id="3_hg1w0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vag0n"]
size = Vector2(230, 154)

[node name="Fase_1" type="Node2D"]
script = ExtResource("1_rkbkb")

[node name="UI_Fase_1" type="CanvasLayer" parent="."]

[node name="ContainerInfo_Fase_1" type="MarginContainer" parent="UI_Fase_1"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="LabelInstrucao_Fase_1" type="Label" parent="UI_Fase_1/ContainerInfo_Fase_1"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Arraste a resposta correta para o quadrado!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContainerExpressao_Fase_1" type="Node2D" parent="UI_Fase_1"]
position = Vector2(0, 100)

[node name="ContainerOpcoes_Fase_1" type="Node2D" parent="UI_Fase_1"]
position = Vector2(0, 250)

[node name="LabelResultado_Fase_1" type="Label" parent="UI_Fase_1"]
offset_top = 400.0
offset_right = 40.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="BotaoConfirmarResposta_Fase_1" type="Button" parent="UI_Fase_1"]
offset_top = 450.0
offset_right = 158.0
offset_bottom = 490.0
text = "Confirmar resposta"
script = ExtResource("2_patqc")

[node name="AreaResposta_Fase_1" type="Area2D" parent="."]
position = Vector2(400, 350)
script = ExtResource("3_hg1w0")

[node name="AreaResposta_Fase_1" type="CollisionShape2D" parent="AreaResposta_Fase_1"]
position = Vector2(105, -29)
shape = SubResource("RectangleShape2D_vag0n")
one_way_collision = true
one_way_collision_margin = 94.3

[node name="SpriteResposta_Fase_1" type="Sprite2D" parent="AreaResposta_Fase_1"]
scale = Vector2(4, 4)

[node name="Camera2D_Fase_1" type="Camera2D" parent="."]

[connection signal="pressed" from="UI_Fase_1/BotaoConfirmarResposta_Fase_1" to="." method="_on_botao_confirmar_resposta_fase_1_pressed"]
